--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -4,6 +4,7 @@
 .nav {
   @include media(mobile) {
     display: none;
+    margin: 0 0 0 -10px;
   }
   .darkmode {
     display: flex;
@@ -16,7 +17,6 @@
   @include media(mobile) {
     @include navOpenClose;
     animation: nav--open 1s ease-in-out 0s 1 normal forwards;
-    @include navLinkDesign;
     @include drapeaulangue;
     .fa-circle-half-stroke {
       color: black;
