--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -78,14 +78,11 @@
   height: 100%;
   position: fixed;
   width: 100%;
-}
-
-@mixin navLinkDesign {
   .nav {
     display: block;
     position: absolute;
     top: 20%;
-    left: 25%;
+    left: 2.5%;
     text-align: center;
     ul {
       display: inline-block;
@@ -106,6 +103,10 @@
         &:nth-last-child(3) {
           border-bottom: 0;
           background-color: $coulour-lang;
+          border-radius: 5%;
+        }
+        &:nth-last-child(4) {
+          border-bottom: 0;
         }
         .nav__link {
           color: $colour-text-light;
