--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -10,7 +10,27 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: center;
+    margin: 0 0 15px 0;
+    &__police {
+      font-size: medium;
+    }
+    .toggle {
+      display: none;
+    }
+    .toggleBtn {
+      border: 3px solid rgb(158, 145, 145);
+      border-radius: 16px;
+      align-self: center;
+      cursor: pointer;
+      display: block;
+      width: 70px;
+      height: 30px;
+      outline: 0;
+      transition: all 0.2s ease-in-out;
+      user-select: none;
+      // &::after {
+      // }
+    }
   }
 }
 .nav-open {
