--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -94,9 +94,11 @@
       }
       li {
         border-bottom: 1px solid $coulour-li-border-bottom;
-        padding: 20px 0;
+        padding: 20px;
+        width: 100%;
         list-style: none;
         cursor: pointer;
+        overflow: hidden;
         &:last-child {
           border-bottom: 0;
         }
@@ -111,7 +113,6 @@
         .nav__link {
           color: $colour-text-light;
           text-decoration: none;
-          margin: 0 0 0 0;
           &--active {
             color: $colour-text-active;
           }
