--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -18,7 +18,7 @@
       display: none;
     }
     .toggleBtn {
-      border: 3px solid rgb(158, 145, 145);
+      border: 3px solid #9e9191;
       border-radius: 16px;
       align-self: center;
       cursor: pointer;
@@ -28,8 +28,18 @@
       outline: 0;
       transition: all 0.2s ease-in-out;
       user-select: none;
-      // &::after {
-      // }
+      &::after {
+        left: 49%;
+        background-color: #9e9191;
+        content: "";
+        border-radius: 16px;
+        width: 50%;
+        overflow: hidden;
+        height: 93%;
+        position: relative;
+        display: block;
+        margin: 1px 0 0 0;
+      }
     }
   }
 }
