--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 
 @import "./components/hamburgerBtn";
 @import "./components/loading";
+@import "./components//darkmodeinput";
 
 @import "./layout/header";
 @import "./layout/nav";
