--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -39,7 +39,6 @@
     left: 0%;
     z-index: 1;
   }
-
 }
 
 @keyframes menu {
@@ -49,10 +48,28 @@
   50% {
     left: -20%;
   }
-  75%{
+  75% {
     left: 20%;
   }
-  100%{
+  100% {
     left: 2.5%;
+  }
+}
+
+@keyframes darkmode-active {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+@keyframes darkmode-desactive {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0%);
   }
 }
