--- a/sass/components/_darkmodeinput.scss
+++ b/sass/components/_darkmodeinput.scss
@@ -48,10 +48,11 @@
         }
         &:checked + .toggleBtn::before {
           animation: darkmode-active 1s ease-in-out 0s 1 normal forwards;
+          margin: 1px 0 0px -2px;
         }
         &:not(:checked) + .toggleBtn::before {
-            animation: darkmode-desactive 1s ease-in-out 0s 1 normal forwards;
-          }
+          animation: darkmode-desactive 1s ease-in-out 0s 1 normal forwards;
+        }
       }
     }
   }
