--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9149,8 +9149,8 @@ button {
     width: 70px;
     height: 30px;
     outline: 0;
-    transition: all 0.2s ease-in-out;
     user-select: none;
+    transition: 0.4s;
   }
   .nav .darkmode .toggleBtn::before {
     left: 1%;
@@ -9165,16 +9165,17 @@ button {
     margin: 1px 0 0 0;
     cursor: pointer;
   }
-  .nav .darkmode input:focus + .toggleBtn {
-    box-shadow: 0 0 0 4px #159ce4b3;
-    outline: none;
+  .nav .darkmode input:checked + .toggleBtn {
+    background-color: #1e2a3a;
+    border: 3px solid #6c51a4;
   }
   .nav .darkmode input:checked + .toggleBtn::before {
-    animation: darkmode-active 1s ease-in-out 0s 1 normal forwards;
+    animation: darkmode-active 0.4s ease-in-out 0s 1 normal forwards;
     margin: 1px 0 0px -2px;
+    background-color: #6c51a4;
   }
   .nav .darkmode input:not(:checked) + .toggleBtn::before {
-    animation: darkmode-desactive 1s ease-in-out 0s 1 normal forwards;
+    animation: darkmode-desactive 0.4s ease-in-out 0s 1 normal forwards;
   }
 }
 
