--- a/sass/components/_darkmodeinput.scss
+++ b/sass/components/_darkmodeinput.scss
@@ -20,8 +20,8 @@
         width: 70px;
         height: 30px;
         outline: 0;
-        transition: all 0.2s ease-in-out;
         user-select: none;
+        transition: 0.4s;
         &::before {
           left: 1%;
           background-color: #9e9191;
@@ -34,24 +34,20 @@
           display: block;
           margin: 1px 0 0 0;
           cursor: pointer;
-          // animation: darkmode 0.4 ease-in-out 0 1 forwards;
         }
       }
       input {
-        // &:checked + .toggleBtn{
-        // background-color: #821B72;;
-        // }
-
-        &:focus + .toggleBtn {
-          box-shadow: 0 0 0 4px #159ce4b3;
-          outline: none;
+        &:checked + .toggleBtn {
+          background-color: #1e2a3a;
+          border: 3px solid #6c51a4;
         }
         &:checked + .toggleBtn::before {
-          animation: darkmode-active 1s ease-in-out 0s 1 normal forwards;
+          animation: darkmode-active 0.4s ease-in-out 0s 1 normal forwards;
           margin: 1px 0 0px -2px;
+          background-color: #6c51a4;
         }
         &:not(:checked) + .toggleBtn::before {
-          animation: darkmode-desactive 1s ease-in-out 0s 1 normal forwards;
+          animation: darkmode-desactive 0.4s ease-in-out 0s 1 normal forwards;
         }
       }
     }
