--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -12,8 +12,12 @@
     @include navOpenClose;
     animation: nav--open 1s ease-in-out 0s 1 normal forwards;
     @include drapeaulangue;
-    .fa-circle-half-stroke {
+    .sombre {
       color: black;
+      margin: 0 5px 0px 0px;
+    }
+    .claire {
+      color:  #b4b400;
       margin: 0 5px 0px 0px;
     }
   }
