--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9179,35 +9179,40 @@ button {
   }
 }
 
-.header {
+.container-header {
   height: 500px;
   width: 100%;
   height: 400px;
   background: url(../../public/image/coffee-header.jpg);
-  position: relative;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: scroll;
 }
-.header .wellcome {
+.container-header header {
+  box-shadow: none !important;
+  background: white !important;
+  position: fixed;
+  width: 100%;
+  z-index: 99;
+}
+.container-header .wellcome {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
   justify-content: space-between;
   width: 90%;
-  position: relative;
   margin: auto;
   bottom: 10%;
 }
-.header .logo-container {
+.container-header .logo-container {
   height: 200px;
   text-align: center;
 }
-.header .header__logo {
+.container-header .header__logo {
   z-index: 99;
 }
-.header img {
+.container-header img {
   height: 100%;
   width: 100px;
   z-index: 99;
