--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,37 +1,39 @@
-  .header {
-    height: 500px;
+.container-header {
+  height: 500px;
+  width: 100%;
+  height: 400px;
+  background: url(../../public/image/coffee-header.jpg);
+  // position: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+  header {
+    box-shadow: none !important;
+    background: white !important;
+    position: fixed;
     width: 100%;
-    height: 400px;
-    background: url(../../public/image/coffee-header.jpg);
-    // background-color: red;
-    position: relative;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: scroll;
-    // position: relative;
-    // z-index: -99;
-    .wellcome {
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      width: 90%;
-      position: relative;
-      margin: auto;
-      bottom: 10%;
-    }
-    .logo-container {
-      height: 200px;
-      text-align: center;
-    }
-    .header__logo {
-      z-index: 99;
-    }
-    img {
-      height: 100%;
-      width: 100px;
-      z-index: 99;
-    }
+    z-index: 99;
   }
-
+  .wellcome {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 90%;
+    margin: auto;
+    bottom: 10%;
+  }
+  .logo-container {
+    height: 200px;
+    text-align: center;
+  }
+  .header__logo {
+    z-index: 99;
+  }
+  img {
+    height: 100%;
+    width: 100px;
+    z-index: 99;
+  }
+}
