--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,7 +10,7 @@
   background-attachment: scroll;
   header {
     box-shadow: none !important;
-    background: white !important;
+    background: transparent !important;
     position: fixed;
     width: 100%;
     z-index: 99;
