--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -17,7 +17,7 @@
       margin: 0 5px 0px 0px;
     }
     .claire {
-      color:  #b4b400;
+      color: #b4b400;
       margin: 0 5px 0px 0px;
     }
   }
@@ -26,6 +26,15 @@
   @include media(mobile) {
     @include navOpenClose;
     animation: nav--close 1s ease-in-out 0s 1 normal forwards;
+    @include drapeaulangue;
+    .sombre {
+      color: black;
+      margin: 0 5px 0px 0px;
+    }
+    .claire {
+      color: #b4b400;
+      margin: 0 5px 0px 0px;
+    }
   }
 }
 .nav-animation {
