--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8971,18 +8971,21 @@ body {
 }
 
 body {
-  font-family: Verdana, "Geneva", Tahoma, sans-serif;
+  font-family: "Geneva", Tahoma, sans-serif;
   color: #15dea5;
   font-size: 2rem;
   font-weight: 100;
   line-height: 1.7;
 }
 
-h1 {
-  font-family: Verdana, "Geneva", Tahoma, sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Verdana, "Geneva", Tahoma, sans-serif !important;
   font-weight: 900;
-  font-size: 5rem;
-  font-style: italic;
 }
 
 textarea {
@@ -8998,26 +9001,26 @@ button {
   font-size: 2.75rem;
 }
 
-.container-hamburger {
-  padding: 0;
+.hamburger {
+  padding: 0 0 15px 0;
 }
-.container-hamburger .hamburger-toggle {
+.hamburger .hamburger-toggle {
   position: relative;
   background: transparent;
   border: 1px solid transparent;
   cursor: pointer;
 }
 @media (max-width: 576px) {
-  .container-hamburger .hamburger-toggle {
+  .hamburger .hamburger-toggle {
     visibility: visible;
     z-index: 99;
   }
 }
-.container-hamburger .hamburger-toggle:focus {
+.hamburger .hamburger-toggle:focus {
   outline-width: 0;
 }
-.container-hamburger .hamburger-toggle [class*=bar-] {
-  background: #3bc1b0;
+.hamburger .hamburger-toggle [class*=bar-] {
+  background: #4bd16f;
   display: block;
   transform: rotate(0deg);
   transition: 0.2s ease all;
@@ -9026,17 +9029,17 @@ button {
   width: 34px;
   margin-bottom: 6px;
 }
-.container-hamburger .hamburger-toggle .bar-bot {
+.hamburger .hamburger-toggle .bar-bot {
   margin-bottom: 0;
 }
-.container-hamburger .opened .bar-top {
+.hamburger .opened .bar-top {
   transform: rotate(45deg);
   transform-origin: 2px 3px;
 }
-.container-hamburger .opened .bar-mid {
+.hamburger .opened .bar-mid {
   opacity: 0;
 }
-.container-hamburger .opened .bar-bot {
+.hamburger .opened .bar-bot {
   transform: rotate(-45deg);
   transform-origin: 0px 3px;
 }
@@ -9180,23 +9183,56 @@ button {
 }
 
 .container-header {
-  height: 500px;
   width: 100%;
-  height: 400px;
+  height: 500px;
   background: url(../../public/image/coffee-header.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: scroll;
+  border: 1px solid red;
+}
+.container-header__background {
+  width: 100%;
+  height: 500px;
+  background-color: #00000080;
+}
+.container-header__info {
+  border: 1px solid violet;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container-header__info .container-information {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container-header__info .container-information__name--modifier {
+  color: #ffffff;
+}
+.container-header__info .container-information__name h2 {
+  font-size: medium;
+  margin: -10px 0px 0px 3px;
+  color: #dadada;
+}
+.container-header__info .container-information__name p {
+  font-size: small;
+  margin: 15px 0px 0px 3px;
+  color: #dadada;
+}
+.container-header__info .container-information__name a {
+  color: #569ded;
+  text-decoration: none;
 }
 .container-header__nav {
   box-shadow: none !important;
   background: transparent !important;
-  position: fixed;
+  position: sticky;
   width: 100%;
   z-index: 99;
 }
-.container-header .nav {
+.container-header__nav .nav {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -9204,15 +9240,16 @@ button {
   width: 90%;
   margin: auto;
   bottom: 10%;
+  border: 1px solid blue;
 }
-.container-header .nav__logo {
+.container-header__nav .nav__logo {
   height: 200px;
   text-align: center;
 }
-.container-header .nav--modifier {
+.container-header__nav .nav--modifier {
   z-index: 99;
 }
-.container-header .nav img {
+.container-header__nav .nav img {
   height: 100%;
   width: 100px;
   z-index: 99;
