--- a/sass/components/_hamburgerBtn.scss
+++ b/sass/components/_hamburgerBtn.scss
@@ -1,5 +1,5 @@
-.container-hamburger {
-  padding: 0;
+.hamburger {
+  padding: 0 0 15px 0;
   .hamburger-toggle {
     @include media(mobile) {
       visibility: visible;
