--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -33,7 +33,7 @@
     outline-width: 0;
   }
   [class*="bar-"] {
-    background: #3bc1b0;
+    background: #4bd16f; //#3bc1b0
     display: block;
     transform: rotate(0deg);
     transition: 0.2s ease all;
