--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -18,28 +18,36 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: auto; // Pour centrer
+    width: 90%;
     .container-information {
       display: flex;
       flex-direction: column;
       align-items: center;
-      &__name {
+      height: 11vh;
+      &__bio {
+        margin: -10px 0px 0px -19px;
         &--modifier {
           color: #ffffff;
         }
         h2 {
-          font-size: medium;
           margin: -10px 0px 0px 3px;
+          font-size: medium;
           color: #dadada;
         }
-        p {
-          font-size: small;
-          margin: 15px 0px 0px 3px;
-          color: #dadada;
-        }
-        a {
-          color: #569ded;
-          text-decoration: none;
-        }
+      }
+    }
+    .bio {
+      p {
+        font-size: small;
+        margin: 0px 0px 0px 2px;
+        color: #dadada;
+      }
+      a {
+        color: #569ded;
+        text-decoration: none;
       }
     }
   }
@@ -54,12 +62,10 @@
       align-items: center;
       flex-wrap: wrap;
       justify-content: space-between;
-      width: 90%;
-      margin: auto;
       bottom: 10%;
       border: 1px solid blue;
       &__logo {
-        height: 200px;
+        height: 19vh;
         text-align: center;
       }
       &--modifier {
