--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -44,6 +44,7 @@
         font-size: small;
         margin: 0px 0px 0px 2px;
         color: #dadada;
+        white-space: pre-line;
       }
       a {
         color: #569ded;
