--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9285,11 +9285,10 @@ button {
     display: block;
     position: absolute;
     top: 20%;
-    left: 2.5%;
-    text-align: center;
   }
   .nav-open .nav ul {
     display: inline-block;
+    text-align: center;
   }
   .nav-open .nav ul .li:first-child {
     background-color: #0078d4;
@@ -9326,6 +9325,12 @@ button {
     height: auto;
     margin: 0px 6px -5px 0px;
   }
+  .nav-open ul {
+    display: block;
+  }
+  .nav-open ul .icon {
+    margin: 0 5px 2px 0px;
+  }
   .nav-open .sombre {
     color: black;
     margin: 0 5px 0px 0px;
@@ -9348,11 +9353,10 @@ button {
     display: block;
     position: absolute;
     top: 20%;
-    left: 2.5%;
-    text-align: center;
   }
   .nav-close .nav ul {
     display: inline-block;
+    text-align: center;
   }
   .nav-close .nav ul .li:first-child {
     background-color: #0078d4;
@@ -9411,11 +9415,10 @@ button {
     display: block;
     position: absolute;
     top: 20%;
-    left: 2.5%;
-    text-align: center;
   }
   .nav-animation .nav ul {
     display: inline-block;
+    text-align: center;
   }
   .nav-animation .nav ul .li:first-child {
     background-color: #0078d4;
