--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -12,6 +12,12 @@
     @include navOpenClose;
     animation: nav--open 1s ease-in-out 0s 1 normal forwards;
     @include drapeaulangue;
+    ul {
+      display: block;
+      .icon {
+        margin: 0 5px 2px 0px;
+      }
+    }
     .sombre {
       color: black;
       margin: 0 5px 0px 0px;
