--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -65,22 +65,37 @@
     }
   }
   // Pour overlay fontawesome tech
-  .container {
-    &:hover {
-      .overlay {
-        opacity: 0.5;
-      }
+  .container-overlay-1 {
+    @include media(mobile) {
+      @include overlayTech;
+      left: 5.8vh;
+      top: 52.8vh;
+      width: 2.6em;
     }
-    .overlay {
-      position: fixed;
-      top: 52.9vh;
-      height: 1.9em;
-      width: 2.5em;
-      opacity: 0;
-      transition: 0.5s ease-in-out;
-      background-color: #008cba;
-      left: 5.9vh;
-      border-radius: 25%;
+  }
+  .container-overlay-2 {
+    @include media(mobile) {
+      @include overlayTech;
+      top: 52.75vh;
+      left: 14.2vh;
+    }
+  }
+  .container-overlay-3 {
+    @include media(mobile) {
+      @include overlayTech;
+      left: 21.3vh;
+    }
+  }
+  .container-overlay-4 {
+    @include media(mobile) {
+      @include overlayTech;
+      left: 28vh;
+    }
+  }
+  .container-overlay-5 {
+    @include media(mobile) {
+      @include overlayTech;
+      left: 35.5vh;
     }
   }
 
