--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9248,141 +9248,126 @@ button {
   color: #f0f0f0;
 }
 @media (max-width: 576px) {
-  .container-header .container-overlay-1 {
-    left: 5.8vh;
-    top: 52.8vh;
-    width: 2.6em;
-  }
   .container-header .container-overlay-1:hover .overlay {
     opacity: 0.8;
   }
   .container-header .container-overlay-1 .overlay {
     position: fixed;
-    top: 52.8vh;
-    height: 1.9em;
-    width: 2.5em;
     opacity: 0;
     transition: 0.5s ease-in-out;
-    background-color: #ba8c63;
+    background-color: white;
     border-radius: 25%;
   }
   .container-header .container-overlay-1 .overlay__text {
     opacity: 1;
     position: absolute;
-    left: 15%;
     right: 0;
+    font-size: medium;
+    overflow-y: visible;
+    left: 15%;
   }
   .container-header .container-overlay-1 .overlay__text--modifier {
     color: black;
   }
+  .container-header .container-overlay-1 .overlay {
+    height: 2.7em;
+    left: 7.5vh;
+    top: 52vh;
+    width: 2.6em;
+  }
 }
 @media (max-width: 576px) {
-  .container-header .container-overlay-2 {
-    top: 52.75vh;
-    left: 14.2vh;
-  }
   .container-header .container-overlay-2:hover .overlay {
     opacity: 0.8;
   }
   .container-header .container-overlay-2 .overlay {
     position: fixed;
-    top: 52.8vh;
-    height: 1.9em;
-    width: 2.5em;
     opacity: 0;
     transition: 0.5s ease-in-out;
-    background-color: #ba8c63;
+    background-color: white;
     border-radius: 25%;
   }
   .container-header .container-overlay-2 .overlay__text {
     opacity: 1;
     position: absolute;
-    left: 15%;
     right: 0;
+    font-size: medium;
+    overflow-y: visible;
+    left: 15%;
   }
   .container-header .container-overlay-2 .overlay__text--modifier {
     color: black;
   }
+  .container-header .container-overlay-2 .overlay {
+    height: 2.7em;
+    width: 2.5em;
+    top: 52vh;
+    left: 17.5vh;
+  }
 }
 @media (max-width: 576px) {
-  .container-header .container-overlay-3 {
-    left: 21.3vh;
-  }
   .container-header .container-overlay-3:hover .overlay {
     opacity: 0.8;
   }
   .container-header .container-overlay-3 .overlay {
     position: fixed;
-    top: 52.8vh;
-    height: 1.9em;
-    width: 2.5em;
     opacity: 0;
     transition: 0.5s ease-in-out;
-    background-color: #ba8c63;
+    background-color: white;
     border-radius: 25%;
   }
   .container-header .container-overlay-3 .overlay__text {
     opacity: 1;
     position: absolute;
-    left: 15%;
     right: 0;
+    font-size: medium;
+    overflow-y: visible;
+    left: 15%;
   }
   .container-header .container-overlay-3 .overlay__text--modifier {
     color: black;
   }
+  .container-header .container-overlay-3 .overlay {
+    height: 2.7em;
+    width: 2.5em;
+    top: 52vh;
+    left: 26.45vh;
+  }
+  .container-header .container-overlay-3 .overlay__text {
+    left: 6% !important;
+  }
 }
 @media (max-width: 576px) {
-  .container-header .container-overlay-4 {
-    left: 28vh;
-  }
   .container-header .container-overlay-4:hover .overlay {
     opacity: 0.8;
   }
   .container-header .container-overlay-4 .overlay {
     position: fixed;
-    top: 52.8vh;
-    height: 1.9em;
-    width: 2.5em;
     opacity: 0;
     transition: 0.5s ease-in-out;
-    background-color: #ba8c63;
+    background-color: white;
     border-radius: 25%;
   }
   .container-header .container-overlay-4 .overlay__text {
     opacity: 1;
     position: absolute;
-    left: 15%;
     right: 0;
+    font-size: medium;
+    overflow-y: visible;
+    left: 15%;
   }
   .container-header .container-overlay-4 .overlay__text--modifier {
     color: black;
   }
-}
-@media (max-width: 576px) {
-  .container-header .container-overlay-5 {
-    left: 35.5vh;
-  }
-  .container-header .container-overlay-5:hover .overlay {
-    opacity: 0.8;
-  }
-  .container-header .container-overlay-5 .overlay {
-    position: fixed;
-    top: 52.8vh;
-    height: 1.9em;
+  .container-header .container-overlay-4 .overlay {
+    height: 2.7em;
     width: 2.5em;
-    opacity: 0;
-    transition: 0.5s ease-in-out;
-    background-color: #ba8c63;
-    border-radius: 25%;
+    top: 52vh;
+    left: 34.8vh;
   }
-  .container-header .container-overlay-5 .overlay__text {
-    opacity: 1;
-    position: absolute;
-    left: 15%;
-    right: 0;
-  }
-  .container-header .container-overlay-5 .overlay__text--modifier {
-    color: black;
+  .container-header .container-overlay-4 .overlay__text {
+    left: 6%;
+    top: 22%;
   }
 }
 .container-header__nav {
