--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8956,7 +8956,7 @@ body {
   box-sizing: border-box;
   background: #001534;
 }
-@media (max-width: 576px) {
+@media (max-width: 575.98px) {
   body {
     background: white;
   }
@@ -9010,7 +9010,7 @@ button {
   border: 1px solid transparent;
   cursor: pointer;
 }
-@media (max-width: 576px) {
+@media (max-width: 575.98px) {
   .hamburger .hamburger-toggle {
     visibility: visible;
     z-index: 99;
@@ -9059,7 +9059,7 @@ button {
   align-items: center;
   position: absolute;
 }
-@media (max-width: 576px) {
+@media (max-width: 575.98px) {
   .loading--circle .loading--box .percentage {
     color: black;
     font-size: medium;
@@ -9075,7 +9075,7 @@ button {
   top: 25%;
   left: 45%;
 }
-@media (max-width: 576px) {
+@media (max-width: 575.98px) {
   .loading--circle .loading--full-hight {
     top: 25%;
     left: 45%;
@@ -9090,7 +9090,7 @@ button {
   transform: rotate(0.16turn);
   animation: loading--spin 1s ease infinite;
 }
-@media (max-width: 576px) {
+@media (max-width: 575.98px) {
   .loading--circle .loading--box::before {
     width: 70px;
     height: 70px;
@@ -9108,7 +9108,7 @@ button {
   transform: rotate(1turn);
   animation: loading--spin 0.3s ease infinite;
 }
-@media (max-width: 576px) {
+@media (max-width: 575.98px) {
   .loading--circle::after {
     width: 60px;
     height: 60px;
@@ -9123,14 +9123,14 @@ button {
   top: 25.5%;
   left: 46.5%;
 }
-@media (max-width: 576px) {
+@media (max-width: 575.98px) {
   .loading--full-hight {
     top: 25.5%;
     left: 46.5%;
   }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 575.98px) {
   .nav .darkmode {
     display: flex;
     flex-direction: column;
@@ -9208,16 +9208,26 @@ button {
 .container-header__info .container-information {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  height: 9vh;
+  align-items: left;
+  height: 10vh;
 }
-.container-header__info .container-information__bio {
-  margin: -10px 0px 0px -19px;
+@media (max-width: 408.98px) {
+  .container-header__info .container-information {
+    height: 8vh;
+  }
 }
-.container-header__info .container-information__bio--modifier {
+.container-header__info .container-information__info {
+  margin: 0px 0px 5vh 2px;
+}
+.container-header__info .container-information__info--modifier {
   color: #ffffff;
 }
-.container-header__info .container-information__bio h2 {
+@media (max-width: 408.98px) {
+  .container-header__info .container-information__info h1 {
+    font-size: 23.4pt;
+  }
+}
+.container-header__info .container-information__info h2 {
   margin: -10px 0px 0px 3px;
   font-size: medium;
   color: #dadada;
@@ -9227,11 +9237,13 @@ button {
   flex-direction: column;
   flex-wrap: wrap;
 }
-.container-header__info .bio p {
+.container-header__info .bio__element {
   font-size: small;
   margin: 0px 0px 5vh 2px;
-  color: #dadada;
   white-space: pre-line;
+}
+.container-header__info .bio__element--modifier {
+  color: #dadada;
 }
 .container-header__info .bio a {
   color: #569ded;
@@ -9245,130 +9257,20 @@ button {
 .container-header__info .bio .tech--modifier {
   color: #f0f0f0;
 }
-@media (max-width: 576px) {
-  .container-header .container-overlay-1:hover .overlay {
-    opacity: 0.9;
+@media (max-width: 575.98px) {
+  .container-header .container-overlay {
+    display: flex;
+    flex-direction: column;
   }
-  .container-header .container-overlay-1 .overlay {
-    position: fixed;
-    opacity: 0;
-    transition: 0.5s ease-in-out;
-    background-color: white;
-    border-radius: 25%;
-    cursor: default;
+  .container-header .container-overlay .overlay {
+    display: none;
   }
-  .container-header .container-overlay-1 .overlay__text {
-    opacity: 1;
-    position: absolute;
-    right: 0;
+  .container-header .container-overlay .overlay__text {
     font-size: medium;
-    overflow-y: visible;
-    left: 15%;
+    margin: 0 0px 0 -8px;
   }
-  .container-header .container-overlay-1 .overlay__text--modifier {
-    color: black;
-  }
-  .container-header .container-overlay-1 .overlay {
-    height: 2.7em;
-    left: 7.5vh;
-    top: 50vh;
-    width: 2.6em;
-  }
-}
-@media (max-width: 576px) {
-  .container-header .container-overlay-2:hover .overlay {
-    opacity: 0.9;
-  }
-  .container-header .container-overlay-2 .overlay {
-    position: fixed;
-    opacity: 0;
-    transition: 0.5s ease-in-out;
-    background-color: white;
-    border-radius: 25%;
-    cursor: default;
-  }
-  .container-header .container-overlay-2 .overlay__text {
-    opacity: 1;
-    position: absolute;
-    right: 0;
-    font-size: medium;
-    overflow-y: visible;
-    left: 15%;
-  }
-  .container-header .container-overlay-2 .overlay__text--modifier {
-    color: black;
-  }
-  .container-header .container-overlay-2 .overlay {
-    height: 2.7em;
-    width: 2.5em;
-    top: 50vh;
-    left: 17.5vh;
-  }
-}
-@media (max-width: 576px) {
-  .container-header .container-overlay-3:hover .overlay {
-    opacity: 0.9;
-  }
-  .container-header .container-overlay-3 .overlay {
-    position: fixed;
-    opacity: 0;
-    transition: 0.5s ease-in-out;
-    background-color: white;
-    border-radius: 25%;
-    cursor: default;
-  }
-  .container-header .container-overlay-3 .overlay__text {
-    opacity: 1;
-    position: absolute;
-    right: 0;
-    font-size: medium;
-    overflow-y: visible;
-    left: 15%;
-  }
-  .container-header .container-overlay-3 .overlay__text--modifier {
-    color: black;
-  }
-  .container-header .container-overlay-3 .overlay {
-    height: 2.7em;
-    width: 2.5em;
-    top: 50vh;
-    left: 26.45vh;
-  }
-  .container-header .container-overlay-3 .overlay__text {
-    left: 6% !important;
-  }
-}
-@media (max-width: 576px) {
-  .container-header .container-overlay-4:hover .overlay {
-    opacity: 0.9;
-  }
-  .container-header .container-overlay-4 .overlay {
-    position: fixed;
-    opacity: 0;
-    transition: 0.5s ease-in-out;
-    background-color: white;
-    border-radius: 25%;
-    cursor: default;
-  }
-  .container-header .container-overlay-4 .overlay__text {
-    opacity: 1;
-    position: absolute;
-    right: 0;
-    font-size: medium;
-    overflow-y: visible;
-    left: 15%;
-  }
-  .container-header .container-overlay-4 .overlay__text--modifier {
-    color: black;
-  }
-  .container-header .container-overlay-4 .overlay {
-    height: 2.7em;
-    width: 2.5em;
-    top: 50vh;
-    left: 34.8vh;
-  }
-  .container-header .container-overlay-4 .overlay__text {
-    left: 6%;
+  .container-header .container-overlay .overlay__text--modifier {
+    color: white;
   }
 }
 .container-header__nav {
@@ -9377,7 +9279,7 @@ button {
   position: sticky;
   width: 100%;
   z-index: 99;
-  height: 16vh;
+  height: 14vh;
 }
 .container-header__nav .nav {
   display: flex;
@@ -9404,14 +9306,14 @@ button {
   display: none;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 575.98px) {
   .nav {
     display: none;
     margin: 0 0 0 -10px;
   }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 575.98px) {
   .nav-open {
     background-color: #fffaf1;
     height: 100%;
@@ -9479,7 +9381,7 @@ button {
   }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 575.98px) {
   .nav-close {
     background-color: #fffaf1;
     height: 100%;
@@ -9541,7 +9443,7 @@ button {
   }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 575.98px) {
   .nav-animation {
     background-color: #fffaf1;
     height: 100%;
@@ -9593,6 +9495,7 @@ button {
 .reseaux-sociaux {
   width: 90%;
   height: 6vh;
+  margin: 0px 0px 1vh 2px;
 }
 .reseaux-sociaux ul {
   list-style: none;
@@ -9600,7 +9503,6 @@ button {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
-  margin: 0px 0px 0px -16px;
 }
 .reseaux-sociaux ul li {
   margin: 0px 15px 0px 0px;
