--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -25,12 +25,20 @@
     .container-information {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      height: 9vh;
-      &__bio {
-        margin: -10px 0px 0px -19px;
+      align-items: left;
+      height: 10vh;
+      @include media(smallMobile) {
+        height: 8vh;
+      }
+      &__info {
+        margin: 0px 0px 5vh 2px;
         &--modifier {
           color: #ffffff;
+        }
+        h1 {
+          @include media(smallMobile) {
+            font-size: 23.4pt;
+          }
         }
         h2 {
           margin: -10px 0px 0px 3px;
@@ -43,12 +51,14 @@
       display: flex;
       flex-direction: column;
       flex-wrap: wrap;
-      p {
+      &__element {
         font-size: small;
         margin: 0px 0px 5vh 2px;
-        color: #dadada;
         white-space: pre-line;
         // height: 5hv;
+        &--modifier {
+          color: #dadada;
+        }
       }
       a {
         color: #569ded;
@@ -59,60 +69,106 @@
         flex-wrap: wrap;
         justify-content: space-evenly;
         &--modifier {
-          color: rgb(240, 240, 240);
+          color: #f0f0f0;
         }
       }
     }
   }
   // Pour overlay fontawesome tech
-  .container-overlay-1 {
+  .container-overlay {
     @include media(mobile) {
-      @include overlayTech;
+      display: flex;
+      flex-direction: column;
       .overlay {
-        height: 2.7em;
-        left: 7.5vh;
-        top: 50vh;
-        width: 2.6em;
-      }
-    }
-  }
-  .container-overlay-2 {
-    @include media(mobile) {
-      @include overlayTech;
-      .overlay {
-        height: 2.7em;
-        width: 2.5em;
-        top: 50vh;
-        left: 17.5vh;
-      }
-    }
-  }
-  .container-overlay-3 {
-    @include media(mobile) {
-      @include overlayTech;
-      .overlay {
-        height: 2.7em;
-        width: 2.5em;
-        top: 50vh;
-        left: 26.45vh;
+        display: none;
         &__text {
-          left: 6% !important;
+          font-size: medium;
+          margin: 0 0px 0 -8px;
+          &--modifier {
+            color: white;
+          }
         }
       }
-    }
-  }
-  .container-overlay-4 {
-    @include media(mobile) {
-      @include overlayTech;
-      .overlay {
-        height: 2.7em;
-        width: 2.5em;
-        top: 50vh;
-        left: 34.8vh;
-        &__text {
-          left: 6%;
-        }
-      }
+      // Mécanisme overlay hover
+      // @include overlayTech;
+      // .overlay {
+      //   height: 2.7em;
+      //   left: 7.5vh;
+      //   top: 50vh;
+      //   width: 2.6em;
+      // }
+      // }
+      // }
+      // .container-overlay-2 {
+      //   @include media(mobile) {
+      //     .overlay {
+      //       display: none;
+
+      //       &__text {
+      //         font-size: medium;
+      //         margin: 0px 0px 0 -10px;
+      //         &--modifier {
+      //           color: white;
+      //         }
+      //       }
+      //     }
+      //     //   @include overlayTech;
+      //     //   .overlay {
+      //     //     height: 2.7em;
+      //     //     width: 2.5em;
+      //     //     top: 50vh;
+      //     //     left: 17.5vh;
+      //     //   }
+      //   }
+      // }
+      // .container-overlay-3 {
+      //   @include media(mobile) {
+      //     .overlay {
+      //       display: none;
+
+      //       &__text {
+      //         font-size: medium;
+      //         margin: 0 0px 0 -8px;
+      //         &--modifier {
+      //           color: white;
+      //         }
+      //       }
+      //     }
+      //     // @include overlayTech;
+      //     // .overlay {
+      //     //   height: 2.7em;
+      //     //   width: 2.5em;
+      //     //   top: 50vh;
+      //     //   left: 26.45vh;
+      //     //   &__text {
+      //     //     left: 6% !important;
+      //     //   }
+      //     // }
+      //   }
+      // }
+      // .container-overlay-4 {
+      //   @include media(mobile) {
+      //     .overlay {
+      //       display: none;
+
+      //       &__text {
+      //         font-size: medium;
+      //         margin: 0 0px 0 -8px;
+      //         &--modifier {
+      //           color: white;
+      //         }
+      //       }
+      //     }
+      // @include overlayTech;
+      // .overlay {
+      //   height: 2.7em;
+      //   width: 2.5em;
+      //   top: 50vh;
+      //   left: 34.8vh;
+      //   &__text {
+      //     left: 6%;
+      //   }
+      // }
     }
   }
   // .container-overlay-5 {
@@ -136,7 +192,7 @@
     position: sticky; //ou fixed, Pour pouvoir faire suivre le nav quand on scroll vers le bas
     width: 100%;
     z-index: 99;
-    height: 16vh;
+    height: 14vh;
     .nav {
       display: flex;
       align-items: center;
