--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -79,6 +79,9 @@
     @include media(mobile) {
       display: flex;
       flex-direction: column;
+      span {
+        font-size: medium;
+      }
       .overlay {
         display: none;
         &__text {
