--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -26,9 +26,13 @@
       display: flex;
       flex-direction: column;
       align-items: left;
-      height: 10vh;
+      height: auto !important;
+      // min-height: 11.5vh;
+      margin: 0px 0 -39px 0;
       @include media(smallMobile) {
-        height: 8vh;
+        height: auto !important;
+        // min-height: 11vh;
+        margin: 0px 0 -33px 0;
       }
       &__info {
         margin: 0px 0px 5vh 2px;
